[package]
name = "file-storage"
version = "0.1.0"
authors = ["david <wizdave97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
serde = "1.0.126"
serde_derive = "1.0.126"
bytes = "1.0.1"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3.15"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "client"
path = "src/client.rs"
